--- a/TextToSpeechDemo/TextToSpeechDemo.Android/TextToSpeechDemo.Android.csproj
+++ b/TextToSpeechDemo/TextToSpeechDemo.Android/TextToSpeechDemo.Android.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\OpenSpeechSettingsImplementation.cs" />
+    <Compile Include="Services\TextToSpeechImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
